--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,3 +1,21 @@
 header {
   background-color: aqua;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  height: 50px;
+
+  img {
+    height: 30px;
+    width: 35px;
+    border: 2px solid goldenrod;
+  }
+
+  .nav-categories {
+    border: 2px solid red;
+  }
+  a {
+    border: 2px solid yellowgreen;
+    font-size: 0.8rem;
+  }
 }
