--- a/client/src/pages/AddPage/AddPage.css
+++ b/client/src/pages/AddPage/AddPage.css
@@ -1,25 +1,28 @@
 .add-photo {
-  margin: 20px;
+  background-color: black;
+  margin: 0;
   min-height: calc(100vh - 98px - 100px);
-  background-color: rgb(185, 185, 228);
 
   h1 {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    color: white;
   }
 
   form {
-    border: 2px solid blue;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     max-width: 900px;
+    color: white;
   }
 
   input {
     border: 2px solid red;
     margin: 8px 5px 18px 5px;
     height: 30px;
+    background-color: rgb(97, 94, 94);
+    font-size: 1.8rem;
   }
 
   button {
