--- a/client/src/pages/EditPage/EditPage.css
+++ b/client/src/pages/EditPage/EditPage.css
@@ -1,9 +1,20 @@
-.delete {
+.edit {
   background-color: rgb(155, 217, 196);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 
   figure {
     border: 2px solid red;
+
+    img {
+      object-fit: cover;
+      width: 300px;
+      height: 300px;
+    }
   }
+
   button {
     height: 30px;
     width: 110px;
