--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -1,3 +1,42 @@
 .home-page {
-  background-color: bisque;
+  background-color: rgb(2, 2, 2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+  figcaption {
+    font-size: 1.6rem;
+    color: White;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+    color: white;
+    margin: 80px 10px 10px 10px;
+  }
+
+  img {
+    object-fit: cover;
+    cursor: pointer;
+    width: 300px;
+    height: 300px;
+  }
+  .add-photo-link {
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    right: 40px;
+    top: 90px;
+  }
+
+  @media screen and (min-width: 992px) {
+    .home-page {
+      background-color: aqua;
+      img {
+        width: 500px;
+        height: 500px;
+      }
+    }
+  }
 }
