--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,19 +1,31 @@
 header {
+  /* border: 2px solid red; */
   background-color: rgb(84, 86, 86);
   display: flex;
   align-items: center;
-  justify-content: end;
   height: 50px;
 
-  /* img {
-    height: 30px;
-    width: 35px;
-    border: 2px solid goldenrod;
-  } */
+  .essai {
+    /* border: 5px solid pink; */
+    display: flex;
+    justify-content: space-between;
+    flex-basis: 100%;
 
-  .nav-categories {
-    /* border: 2px solid red; */
-    width: 160px;
+    .logo {
+      margin: 5px;
+      height: 40px;
+      width: 40px;
+      /* border: 2px solid blue; */
+      display: flex;
+      justify-content: flex-start;
+    }
+    .nav-categories {
+      display: flex;
+      align-items: center;
+
+      /* border: 2px solid orange; */
+      /* width: 160px; */
+    }
   }
   a {
     /* border: 2px solid yellowgreen; */
@@ -23,5 +35,23 @@ header {
     color: white;
     font-size: 1rem;
     cursor: pointer;
+  }
+  span {
+    position: relative;
+    padding-bottom: .7rem;
+  }
+  span:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-50%) scaleX(0);
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    transition: transform 250ms;
+  }
+  .nav-categories a:hover span:after {
+    transform: translateX(0%) scaleX(1);
   }
 }
