--- a/client/src/pages/AddPage/AddPage.css
+++ b/client/src/pages/AddPage/AddPage.css
@@ -1,7 +1,7 @@
 .add-photo {
   background-color: black;
   margin: 0;
-  min-height: calc(100vh - 98px - 100px);
+  min-height: calc(100vh - 15px - 100px);
 
   h1 {
     text-align: center;
@@ -18,11 +18,11 @@
   }
 
   input {
-    border: 2px solid red;
     margin: 8px 5px 18px 5px;
     height: 30px;
     background-color: rgb(97, 94, 94);
-    font-size: 1.8rem;
+    font-size: 1rem;
+    color: white;
   }
 
   button {
@@ -30,5 +30,15 @@
     width: 110px;
     cursor: pointer;
     margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .update {
+    .form {
+      margin: 0 auto;
+    }
+    input {
+      font-size: 1.2rem;
+    }
   }
 }
