--- a/client/src/pages/UpdatePage/UpdatePage.css
+++ b/client/src/pages/UpdatePage/UpdatePage.css
@@ -1,25 +1,36 @@
 .update {
-  margin: 20px;
-  min-height: calc(100vh - 98px - 100px);
-  background-color: rgb(241, 172, 225);
+  background-color: black;
+  margin: 0;
+  min-height: calc(100vh - 35px - 100px);
 
   h1 {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
+    color: white;
+    margin: 0;
+    padding: 20px;
   }
 
   form {
-    border: 2px solid blue;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     max-width: 900px;
+    color: white;
+    padding: 0.5rem 1rem;
+
+    label {
+      margin: 10px 10px 0 12px;
+      font-size: 15px;
+    }
   }
 
   input {
-    border: 2px solid red;
     margin: 8px 5px 18px 5px;
     height: 30px;
+    background-color: rgb(97, 94, 94);
+    font-size: 1rem;
+    color: white;
   }
 
   button {
@@ -27,5 +38,15 @@
     width: 110px;
     cursor: pointer;
     margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .update {
+    .form {
+      margin: 0 auto;
+    }
+    input {
+      font-size: 1.2rem;
+    }
   }
 }
