--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -9,29 +9,38 @@
     font-size: 1.5rem;
     color: White;
   }
-
-  h1 {
-    flex-basis: 100%;
-    font-size: 1rem;
-    color: white;
-    margin: 80px 10px 10px 10px;
-    text-align: center;
-  }
-
-  img {
-    object-fit: cover;
-    cursor: pointer;
-    width: 300px;
-    height: 300px;
-  }
-  .add-photo-link {
-    color: white;
-    cursor: pointer;
-    position: absolute;
-    right: 40px;
-    top: 90px;
-  }
 }
+.big-logo {
+  border: 2px solid red;
+  width: 100px;
+  height: 100px;
+}
+a {
+  text-decoration: none;
+}
+
+h1 {
+  flex-basis: 100%;
+  font-size: 1rem;
+  color: white;
+  margin: 20px 10px 10px 10px;
+  text-align: center;
+}
+
+img {
+  object-fit: cover;
+  cursor: pointer;
+  width: 300px;
+  height: 300px;
+}
+.add-photo-link {
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  right: 40px;
+  top: 90px;
+}
+
 @media screen and (min-width: 455px) and (max-width: 992px) {
   .home-page {
     display: flex;
