--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -12,9 +12,9 @@ header {
     flex-basis: 100%;
 
     .logo {
-      margin: 5px;
-      height: 40px;
-      width: 40px;
+      margin: 7px 7px 7px 0;
+      height: 50px;
+      width: 50px;
       /* border: 2px solid blue; */
       display: flex;
       justify-content: flex-start;
@@ -31,7 +31,7 @@ header {
     /* border: 2px solid yellowgreen; */
     font-size: 0.8rem;
     text-decoration: none;
-    margin: 8px;
+    margin: 20px;
     color: white;
     font-size: 1rem;
     cursor: pointer;
@@ -39,6 +39,7 @@ header {
   span {
     position: relative;
     padding-bottom: .7rem;
+    font-size: 1.2rem;
   }
   span:after {
     content: "";
