--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,12 +1,10 @@
 header {
-  /* border: 2px solid red; */
   background-color: rgb(84, 86, 86);
   display: flex;
   align-items: center;
   height: 50px;
 
   .essai {
-    /* border: 5px solid pink; */
     display: flex;
     justify-content: space-between;
     flex-basis: 100%;
@@ -15,20 +13,15 @@ header {
       margin: 7px 7px 7px 0;
       height: 50px;
       width: 50px;
-      /* border: 2px solid blue; */
       display: flex;
       justify-content: flex-start;
     }
     .nav-categories {
       display: flex;
       align-items: center;
-
-      /* border: 2px solid orange; */
-      /* width: 160px; */
     }
   }
   a {
-    /* border: 2px solid yellowgreen; */
     font-size: 0.8rem;
     text-decoration: none;
     margin: 20px;
@@ -39,7 +32,7 @@ header {
   span {
     position: relative;
     padding-bottom: .7rem;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
   }
   span:after {
     content: "";
@@ -54,5 +47,12 @@ header {
   }
   .nav-categories a:hover span:after {
     transform: translateX(0%) scaleX(1);
+  }
+}
+@media screen and (min-width: 992px) {
+  header {
+    span {
+      font-size: 1.5rem;
+    }
   }
 }
