--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -10,7 +10,7 @@ header {
     flex-basis: 100%;
 
     .logo {
-      margin: 7px 7px 7px 0;
+      margin: 13px 5px 5px 0;
       height: 50px;
       width: 50px;
       display: flex;
@@ -32,7 +32,7 @@ header {
   span {
     position: relative;
     padding-bottom: .7rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   span:after {
     content: "";
@@ -53,6 +53,9 @@ header {
   header {
     span {
       font-size: 1.5rem;
+    }
+    .logo {
+      margin: 9px 5px 5px 0;
     }
   }
 }
