--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -11,6 +11,7 @@
   }
 }
 .big-logo {
+  margin: 10px;
   width: 180px;
   height: 180px;
 }
@@ -36,9 +37,9 @@ img {
   color: white;
   cursor: pointer;
   position: absolute;
-  right: 40px;
-  top: 90px;
-
+  right: 20px;
+  top: 120px;
+  padding: 5px;
   font-size: 1rem;
 }
 
@@ -63,6 +64,7 @@ img {
     justify-content: center;
 
     img {
+      margin: 10px;
       width: 400px;
       height: 400px;
     }
@@ -74,6 +76,8 @@ img {
       width: 80px;
       height: 40px;
       font-size: 1.5rem;
+      right: 40px;
+      top: 140px;
     }
   }
 }
