--- a/client/src/pages/AddPage/AddPage.css
+++ b/client/src/pages/AddPage/AddPage.css
@@ -7,9 +7,12 @@
     text-align: center;
     font-size: 1.8rem;
     color: white;
+    margin: 0;
+    padding: 40px;
   }
 
   form {
+    /* border: 1px solid yellow; */
     display: flex;
     flex-direction: column;
     margin: 0 auto;
