--- a/client/src/pages/EditPage/EditPage.css
+++ b/client/src/pages/EditPage/EditPage.css
@@ -37,7 +37,7 @@
     gap: 15px;
   }
   a {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     color: black;
     display: flex;
     align-items: center;
@@ -47,11 +47,12 @@
     font-size: 13.3333;
     padding: 1px 6px;
     cursor: pointer;
+    border-radius: 0%;
   }
   .delete {
     border: none;
     cursor: pointer;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
   }
 }
 @media screen and (min-width: 768px) {
